# feed-to-epub

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: config.rs  feed_reader.rs  main.rs  storage.rs  transformer.rs
src/feed_reader/: config.rs  mod.rs
src/feed_reader_v2/: config.rs  mod.rs
test/: rachelbythebay.xml
