[package]
name = "rss-to-epub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
epub-builder = "0.7.4"
feed-rs = "2.0.0"
rusqlite = "0.31.0"
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.61"
toml = "0.8.14"
ureq = "2.10.0"
url = "2.5.2"
