[package]
name = "feed-to-epub"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.96"
jiff = "0.2.0"
clap = { version = "4.5.9", features = ["derive"] }
epub-builder = "0.8.1"
expanduser = "1.2.2"
feed-rs = "2.0.0"
rusqlite = "0.31.0"
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "2.0.11"
toml = "0.8.14"
ureq = "2.10.0"
url = "2.5.2"
